--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         run: |
           sudo timedatectl set-timezone Asia/Shanghai
           wget -qO /opt/sdk.tar.zst https://mirror-03.infra.openwrt.org/releases/24.10.0-rc1/targets/x86/64/openwrt-sdk-24.10.0-rc1-x86-64_gcc-13.3.0_musl.Linux-x86_64.tar.zst
-          tar  -I zstd /opt/sdk.tar.zst -C /opt
+          tar -I zstd -xf /opt/sdk.tar.zst -C /opt
           cp -R ${{ github.workspace }} /opt/luci-app-easytier
       - name: 开始编译
         run: |
